Update documentation references to mcp-agent, and replace logo (#293)

--- a/docs/advanced/temporal.mdx
+++ b/docs/advanced/temporal.mdx
@@ -3,7 +3,7 @@ title: "Temporal"
 description: "Build fault-tolerant, long-running workflows requiring guaranteed execution."
 ---
 
-MCP Agent supports durable workflow execution using [Temporal](https://temporal.io/), providing reliability, scalability, and observability for complex AI workflows.
+mcp-agent supports durable workflow execution using [Temporal](https://temporal.io/), providing reliability, scalability, and observability for complex AI workflows.
 
 ## Why Use Temporal?
 
@@ -17,7 +17,7 @@ MCP Agent supports durable workflow execution using [Temporal](https://temporal.
   <Card title="Observability" icon="chart-bar">
     Built-in monitoring, logging, and debugging through Temporal UI
   </Card>
-  <Card title="Reliability" icon="refresh">
+  <Card title="Reliability" icon="hammer">
     Automatic retries, timeouts, and error handling
   </Card>
 </CardGroup>
