--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,11 +3,11 @@ title: Introduction
 description: "Build effective agents with Model Context Protocol using simple, composable patterns."
 ---
 
-**MCP Agent** is a simple, composable framework for building AI agents using the [Model Context Protocol (MCP)](https://modelcontextprotocol.io/introduction). It implements [Anthropic's Building Effective Agents](https://www.anthropic.com/research/building-effective-agents) patterns in a model-agnostic way, allowing you to create robust agent applications that can leverage any MCP-compatible tools and services.
+**mcp-agent** is a simple, composable framework for building AI agents using the [Model Context Protocol (MCP)](https://modelcontextprotocol.io/introduction). It implements [Anthropic's Building Effective Agents](https://www.anthropic.com/research/building-effective-agents) patterns in a model-agnostic way, allowing you to create robust agent applications that can leverage any MCP-compatible tools and services.
 
-## What is MCP Agent?
+## What is mcp-agent?
 
-MCP Agent bridges the gap between the low-level [Model Context Protocol](https://modelcontextprotocol.io/introduction) and high-level agent patterns. It handles the complex mechanics of managing MCP server connections, tool orchestration, and workflow patterns so you can focus on building your application logic.
+mcp-agent bridges the gap between the low-level [Model Context Protocol](https://modelcontextprotocol.io/introduction) and high-level agent patterns. It handles the complex mechanics of managing MCP server connections, tool orchestration, and workflow patterns so you can focus on building your application logic.
 
 <CardGroup cols={2}>
   <Card title="MCP Integration" icon="link">
@@ -31,15 +31,15 @@ MCP Agent bridges the gap between the low-level [Model Context Protocol](https:/
   </Card>
 </CardGroup>
 
-## Why MCP Agent?
+## Why mcp-agent?
 
 ### The MCP Ecosystem
 
-As [more services become MCP-aware](https://github.com/punkpeye/awesome-mcp-servers), you can use MCP Agent to build agents that leverage these tools out-of-the-box. MCP Agent is the only framework purpose-built for the MCP protocol, making it the simplest way to build robust agent applications.
+As [more services become MCP-aware](https://github.com/punkpeye/awesome-mcp-servers), you can use mcp-agent to build agents that leverage these tools out-of-the-box. mcp-agent is the only framework purpose-built for the MCP protocol, making it the simplest way to build robust agent applications.
 
 ### Proven Patterns
 
-MCP Agent implements every pattern from Anthropic's research on building effective agents:
+mcp-agent implements every pattern from Anthropic's research on building effective agents:
 
 <CardGroup cols={3}>
   <Card
@@ -114,7 +114,7 @@ if __name__ == "__main__":
 ## What You'll Learn
 
 <Steps>
-  <Step title="Get Started">Install MCP Agent and create your first agent</Step>
+  <Step title="Get Started">Install mcp-agent and create your first agent</Step>
   <Step title="Core Concepts">
     Understand agents, MCP servers, and Augmented LLMs
   </Step>
@@ -157,5 +157,5 @@ if __name__ == "__main__":
 </CardGroup>
 
 <Card title="Ready to Get Started?" icon="rocket" href="/installation">
-  Let's install MCP Agent and build your first agent!
+  Let's install mcp-agent and build your first agent!
 </Card>
