--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,10 +1,10 @@
 ---
 title: Quick Start
-description: "Build your first MCP Agent in 5 minutes! This guide will walk you through creating a simple agent that can read files and fetch web content."
+description: "Build your first mcp-agent in 5 minutes! This guide will walk you through creating a simple agent that can read files and fetch web content."
 ---
 
 <Info>
-  Make sure you have [installed MCP Agent](/installation) before proceeding.
+  Make sure you have [installed mcp-agent](/installation) before proceeding.
 </Info>
 
 ## Overview
@@ -181,7 +181,7 @@ You should see output similar to this:
 
   # My First Agent
 
-  This is a simple MCP Agent that can read files and fetch web content.
+  This is a simple mcp-agent that can read files and fetch web content.
 
   ## Features
   - File system access
