--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -121,8 +121,8 @@ async def main():
 
         async with finder_agent:
             # List available tools
-            tool_listing = await finder_agent.list_tools()
-            logger.info("Available tools:", data=[tool.name for tool in tool_listing.tools])
+            list_tools_result = await finder_agent.list_tools()
+            logger.info("Available tools:", data=[tool.name for tool in list_tools_result.tools])
 
             # Attach an OpenAI LLM to the agent
             llm = await finder_agent.attach_llm(OpenAIAugmentedLLM)
